# OctoPrint-Bme_monitor

./: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml
extras/: README.txt  bme_monitor.md
extras/github/: bug_report.yml  feature_request.yml
octoprint_bme_monitor/: __init__.py
octoprint_bme_monitor/static/js/: bme_monitor.js
octoprint_bme_monitor/templates/: bme_monitor_tab.jinja2
translations/: README.txt
