[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-Bme_monitor"
version = "0.1.0"
description = "get it working"
authors = [
    {name = "G6seven", email = "you@example.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = [
    "license"
]

requires-python = ">=3.7, <4"

# any additional requirements (besides OctoPrint) should be listed here
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_bme_monitor",
    "octoprint_bme_monitor.*"
]

[project.entry-points."octoprint.plugin"]
bme_monitor = "octoprint_bme_monitor"

[project.urls]
Homepage = "https://github.com/G6seven/OctoPrint-Bme_monitor"

[project.optional-dependencies]
develop = [
    "go-task-bin"
]
